--- a/web.config
+++ b/web.config
@@ -4,6 +4,7 @@
         <customErrors mode="Off"/>
     </system.web>
     <system.webServer>
+        <customErrors mode="Off"/>
         <urlCompression doDynamicCompression="true" doStaticCompression="true" dynamicCompressionBeforeCache="true"/>
         <staticContent>
             <remove fileExtension=".svg" />
