--- a/.gitignore
+++ b/.gitignore
@@ -122,8 +122,8 @@ bootstrap/compiled.php
 app/storage/
 
 # Laravel 5 & Lumen specific
-# bootstrap/cache/
-# storage/
+bootstrap/cache/
+storage/
 .env.*.php
 .env.php
 .env
