--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,18 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "xethron/migrations-generator": "dev-l5",
+        "way/generators": "dev-feature/laravel-five-stable",
+        "user11001/eloquent-model-generator": "~2.0",
+        "laravel/homestead": "^3.0"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "git@github.com:jamisonvalenta/Laravel-4-Generators.git"
+        }
+    ],
     "autoload": {
         "classmap": [
             "database"
