--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "laravel/framework": "5.2.*",
 	    "tymon/jwt-auth": "0.5.*",
         "dingo/api": "1.0.*@dev",
-        "barryvdh/laravel-cors": "^0.7.1"
+        "barryvdh/laravel-cors": "^0.7.1",
+        "way/generators": "dev-feature/laravel-five-stable",
+        "user11001/eloquent-model-generator": "~2.0",
+        "laravel/homestead": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -17,10 +20,7 @@
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
-        "xethron/migrations-generator": "dev-l5",
-        "way/generators": "dev-feature/laravel-five-stable",
-        "user11001/eloquent-model-generator": "~2.0",
-        "laravel/homestead": "^3.0"
+        "xethron/migrations-generator": "dev-l5"
     },
     "repositories": [
         {
