--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,7 @@
         "laravel/framework": "5.2.*",
 	    "tymon/jwt-auth": "0.5.*",
         "dingo/api": "1.0.*@dev",
-        "barryvdh/laravel-cors": "^0.7.1",
-        "way/generators": "dev-feature/laravel-five-stable",
-        "user11001/eloquent-model-generator": "~2.0",
-        "laravel/homestead": "^3.0"
+        "barryvdh/laravel-cors": "^0.7.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -20,8 +17,17 @@
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
-        "xethron/migrations-generator": "dev-l5"
+        "xethron/migrations-generator": "dev-l5",
+        "way/generators": "dev-feature/laravel-five-stable",
+        "user11001/eloquent-model-generator": "~2.0",
+        "laravel/homestead": "^3.0"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/JeffreyWay/Laravel-4-Generators.git"
+        }
+    ],
     "autoload": {
         "classmap": [
             "database"
