--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=base64:PVaZRw03LlWvZ15fLeWoRrnW+HwyWgudA/RcTQ/dbGs=
 
-JWT_SECRET=SomeRandomString
+JWT_SECRET=63APpCrVumgFrxqGGGiT12dpu3aEGzQQ
 
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=sqlsrv
+DB_HOST=cedar.database.windows.net
+DB_DATABASE=DeviceMaintenance
+DB_USERNAME=chillyistkult
+DB_PASSWORD=H4BvaoC3
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
