--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-	    "tymon/jwt-auth": "0.5.*",
+	    "tymon/jwt-auth": "0.5.9",
         "dingo/api": "1.0.*@dev",
         "barryvdh/laravel-cors": "^0.7.1",
         "barryvdh/laravel-ide-helper": "^2.1"
