--- a/composer.json
+++ b/composer.json
@@ -18,17 +18,10 @@
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
-        "xethron/migrations-generator": "dev-l5",
-        "way/generators": "dev-feature/laravel-five-stable",
-        "user11001/eloquent-model-generator": "~2.0",
-        "laravel/homestead": "^3.0"
+        "laravel/homestead": "^3.0",
+        "laracasts/generators": "^1.1",
+        "ignasbernotas/laravel-model-generator": "^1"
     },
-    "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/JeffreyWay/Laravel-4-Generators.git"
-        }
-    ],
     "autoload": {
         "classmap": [
             "database"
