--- a/solano.yml
+++ b/solano.yml
@@ -11,8 +11,8 @@ hooks:
     composer install # Install depdencies
     composer require "solano/solano-phpunit" # Add Solano CI parallel test runner
     git checkout -- composer.json # Restore to not change cache key_paths
-    cp -f .env-solano .env && php artisan key:generate # Set .env file
-    cp -f config/app-solano.php config/app.php # Set app config file
+    cp -f .env && php artisan key:generate # Set .env file
+    cp -f config/app.php # Set app config file
   worker_setup: |
     set -e # Exit on error
     php artisan migrate --seed # create and populate tables
