--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=base64:PVaZRw03LlWvZ15fLeWoRrnW+HwyWgudA/RcTQ/dbGs=
+APP_KEY=SOMESTRING
 
-JWT_SECRET=63APpCrVumgFrxqGGGiT12dpu3aEGzQQ
+JWT_SECRET=SOMESECRET
 
 DB_CONNECTION=sqlsrv
-DB_HOST=cedar.database.windows.net
-DB_DATABASE=DeviceMaintenance
-DB_USERNAME=chillyistkult
-DB_PASSWORD=H4BvaoC3
+DB_HOST=YOURHOST
+DB_DATABASE=YOURDATABASE
+DB_USERNAME=USER
+DB_PASSWORD=PASSWORD
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
