--- a/.env.solano
+++ b/.env.solano
@@ -1,6 +1,11 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=base64:PVaZRw03LlWvZ15fLeWoRrnW+HwyWgudA/RcTQ/dbGs=
+APP_KEY=SomeRandomString
+
+DB_HOST=${TDDIUM_DB_MYSQL_HOST}
+DB_DATABASE=${TDDIUM_DB_MYSQL_NAME}
+DB_USERNAME=${TDDIUM_DB_MYSQL_USER}
+DB_PASSWORD=${TDDIUM_DB_MYSQL_PASSWORD}
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
