--- a/.env.solano
+++ b/.env.solano
@@ -7,5 +7,7 @@ DB_DATABASE=${TDDIUM_DB_MYSQL_NAME}
 DB_USERNAME=${TDDIUM_DB_MYSQL_USER}
 DB_PASSWORD=${TDDIUM_DB_MYSQL_PASSWORD}
 
+DB_CONNECTION=mysql
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
