--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
     version: 5.6.22
 dependencies:
   pre:
-    - sudo pip install awsebcli --ignore-installed setuptools
+    - pip install awsebcli
 deployment:
   production:
     branch: master
