--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -3,7 +3,7 @@ branch-defaults:
     environment: ydm-api
 global:
   application_name: ydm
-  default_ec2_keyname: null
+  default_ec2_keyname: aws-eb
   default_platform: 64bit Amazon Linux 2016.03 v2.1.4 running PHP 5.6
   default_region: eu-west-1
   profile: eb-cli
