Updated eb config

--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,10 @@ APP_KEY=SOMESTRING
 JWT_SECRET=SOMESECRET
 
 DB_CONNECTION=sqlsrv
-DB_HOST=YOURHOST
-DB_DATABASE=YOURDATABASE
-DB_USERNAME=USER
-DB_PASSWORD=PASSWORD
+DB_HOST=ydm.c5wqhhbbpcmx.eu-west-1.rds.amazonaws.com
+DB_DATABASE=ydm
+DB_USERNAME=username
+DB_PASSWORD=password
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
